# monga

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  build  buildall  buildexec  buildlex  buildlib  buildtests  buildyacc  configure  debug  gencases  readme.md  run  testa  testall
scripts/bash/: domonga  gencases  testall  testcgen
src/: CMakeLists.txt  alloc.c  alloc.h  ast.c  ast.h  ast_dump.c  ast_dump.h  ast_xml.c  ast_xml.h  error.c  error.h  grammar.y  lex.c  lex.h  lex.l  main.c  monga.y  monstack.c  monstack.h  parser.c  parser.h  strutils.c  strutils.h
src/ast/: definition_node.c  parameter.c
src/exec/: CMakeLists.txt  main.c
src/include/: alloc.h  ast.h  defines.h  error.h  lex.h  mon_alloc.h  mon_ast.h  mon_defines.h  mon_error.h  mon_parser.h  mon_stack.h  monstack.h  parser.h  readme.md
src/libmonga/: CMakeLists.txt  alloc.c  ast.c  ast_dump.c  ast_dump.h  ast_private.h  ast_xml.c  ast_xml.h  bitutils.h  debug.c  defgroup.c  dict.c  error.c  grammar.y  lex.c  lex.l  lex_private.h  literal.c  nameof.h  parser.c  privatealloc.h  sem.c  sem.h  strutils.c  strutils.h  vector.c
src/libmonga/ast/: CMakeLists.txt  assignment.c  binop.c  block.c  call.c  cond.c  definition.c  definition_node.c  exp.c  field.c  parameter.c  statement.c  typedesc.c  var.c
src/libmonga/ast/definitions/: func_def.c  type_def.c  var_def.c
src/libmonga/codegen/: llvmctx.c  llvmctx.h  llvmemit.c  llvmemit.h  llvmgen.c
src/libmonga/include/: mon_alloc.h  mon_ast.h  mon_codegen.h  mon_debug.h  mon_defgroup.h  mon_defines.h  mon_dict.h  mon_error.h  mon_lex.h  mon_literal.h  mon_parser.h  mon_sem.h  mon_var.h  mon_vector.h  monga.h  readme.md
src/libmonga/include/ast/: mon_astbase.h  mon_binop.h  mon_block.h  mon_call.h  mon_cond.h  mon_definition.h  mon_definition_node.h  mon_exp.h  mon_field.h  mon_parameter.h  mon_statement.h  mon_typedesc.h  mon_var.h  readme.md
src/libmonga/include/ast/conditions/: mon_bincond.h  mon_comparison.h
src/libmonga/include/ast/definitions/: mon_func_def.h  mon_type_def.h  mon_var_def.h
src/libmonga/include/ast/expressions/: mon_binop.h  mon_condexp.h
src/libmonga/include/ast/statements/: mon_assignment.h  mon_call.h  mon_if.h  mon_return.h  mon_while.h
src/libmonga/sem/: builtins.c  builtins.h  scope.c  scope.h  symbol.c  symbol.h  types.c  types.h
src/monrt/: CMakeLists.txt
src/monrt/c/: err.c  err.h  mem.c  mem.h  monio.c  monio.h  monrt.c  monrt.h  monstr.c  monstr.h  montypes.c  montypes.h  obj.c  obj.h  utils.c  utils.h
src/monrt/monga/: io.mon  stringlib.mon  utils.mon
src/montests/: CMakeLists.txt  asttests.c  dicttests.c  montests.c  montests.h  vectortests.c
tests/: testall.py  unittests
tests/ast_dump_cases/: empty.expected  factorial  factorial.expected  len  len.expected  ok_case1  ok_case1.expected  ok_case2  ok_case2.expected
tests/codegen_cases/: 10.mon  10.mon.ll  anonymous_record_array.mon  anonymous_record_array.mon.ll  arraylist.mon  arraylist.mon.expected  arraylist.mon.ll  char.mon  char.mon.ll  condexp.mon  condexp.mon.ll  continue.mon  continue.mon.ll  conversions.mon  conversions.mon.expected  conversions.mon.ll  doublearray_rec.mon  doublearray_rec.mon.expected  doublearray_rec.mon.ll  echo.mon  echo.mon.expected  echo.mon.ll  globalvar.mon  globalvar.mon.ll  helloworld.mon  helloworld.mon.ll  linkedlisttraversal.mon  linkedlisttraversal.mon.ll  monrt_strlib_test1.mon  monrt_strlib_test1.mon.ll  newobj.mon  newobj.mon.expected  newobj.mon.ll  null.mon  null.mon.ll  null_array_elements.mon  (+11 more)
(+92 files in other folders)
